Created the header of landing page and added some relevant pictures to media folder

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Singapore - Travel website</title>
   </head>
   <body>
-    <p>Hello world!</p>
+    <div class="container">
+      <header>
+        <h3>~TRAVEL~</h3>
+        <h1>Welcome to Singapore</h1>
+        <h2>Country with rich cultural heritage</h2>
+        <h2>in South East Asia</h2>
+        <a href="#">Learn more</a>
+      </header>
+    </div>
   </body>
 </html>
