Added footer and photos in media folder

--- a/index.html
+++ b/index.html
@@ -13,9 +13,64 @@
         <h3>~TRAVEL~</h3>
         <h1>Welcome to Singapore</h1>
         <h2>Country with rich cultural heritage</h2>
+        <h2>& world-class buildings</h2>
         <h2>in South East Asia</h2>
         <a href="#">Learn more</a>
       </header>
+
+      <footer>
+        <div class="footer-grid">
+          <div>
+            <h3>More about Singapore</h3>
+            <ul>
+              <li>
+                <a href="https://www.changiairport.com/" target="_blank">
+                  Singapore Changi Airport website
+                </a>
+              </li>
+              <li>
+                <a href="https://goo.gl/maps/fwZcEumDzUBtkn3g9" target="_blank">
+                  Map of Singapore
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://www.lta.gov.sg/content/ltagov/en/getting_around/public_transport/rail_network.html"
+                  target="_blank"
+                >
+                  Public transport map
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <div>
+            <h3>About me</h3>
+            <p>
+              Hey there! I am Hui Shan. I have been living in Singapore for my
+              whole life and I am very grateful that I was born here.
+            </p>
+            <p>
+              I created this page as part of a project for SheCodes Responsive
+              Add-On workshop to develop my coding skills.
+            </p>
+          </div>
+
+          <div>
+            <h3>About this website</h3>
+            <p>
+              This page is about some well-known tourist spots in Singapore, was
+              coded by Toh Hui Shan and is
+              <a
+                href="https://github.com/tohhuishan/shecodes-responsive-travel-website"
+                target="_blank"
+              >
+                open-sourced
+              </a>
+            </p>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
