Completed the first main section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="source/style.css" />
-    <title>Singapore - Travel website</title>
+    <title>Welcome to Singapore - Travel website</title>
   </head>
   <body>
     <div class="container">
@@ -17,6 +17,68 @@
         <h2>in South East Asia</h2>
         <a href="#">Learn more</a>
       </header>
+
+      <main>
+        <section class="section-1">
+          <h2>Why Singapore?</h2>
+          <div class="main-grid-1">
+            <div>
+              <h3>Singapore is a City in Nature</h3>
+              <p>
+                To combat this decline in natural space, the government
+                introduced the vision of making Singapore a "Garden City" after
+                its independence, aiming to improve quality of life. Since then,
+                nearly 10% of Singapore's land has been set aside for parks and
+                nature reserves. Singapore's well known gardens include the
+                Singapore Botanic Gardens, a 164-year-old (as of 2023) tropical
+                garden and Singapore's first UNESCO World Heritage Site.
+              </p>
+            </div>
+            <div>
+              <img src="/media/botanic-garden.jpg" alt="Botanic Gardens" />
+            </div>
+
+            <div>
+              <h3>Singapore has Rich Cultural Heritage</h3>
+              <p>
+                Despite its small size, Singapore has a diversity of languages,
+                religions, and cultures. Racial and religious harmony is
+                regarded as a crucial part of Singapore's success, and played a
+                part in building a Singaporean identity. As such, citizens with
+                different ethnicities can exercise the freedom to practise their
+                racial and religious activities.
+              </p>
+            </div>
+            <div>
+              <img
+                src="/media/peranakan-shophouses.jpg"
+                alt="Peranakan shophouses"
+              />
+            </div>
+
+            <div>
+              <h3>Singapore is a Food Haven</h3>
+              <p>
+                Local foodstuff generally relate to a particular ethnicity -
+                Chinese, Malay and Indian; but the diversity of cuisine has
+                increased further by the hybridisation of different styles, such
+                as the Peranakan cuisine, a mix of Chinese and Malay cuisine.
+                The hawker culture in Singapore was successfully inscribed as
+                Singapore's first element on the UNESCO Representative List of
+                the Intangible Cultural Heritage of Humanity on 16 December
+                2020.
+              </p>
+            </div>
+            <div>
+              <img src="/media/food.jpg" alt="Food variety on a table" />
+            </div>
+          </div>
+        </section>
+
+        <section class="section-2"></section>
+
+        <section class="section-3"></section>
+      </main>
 
       <footer>
         <div class="footer-grid">
