Completed second main section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <main>
         <section class="section-1">
           <h2>Why Singapore?</h2>
-          <div class="main-grid-1">
+          <div class="main-grid-2-columns">
             <div>
               <h3>Singapore is a City in Nature</h3>
               <p>
@@ -75,9 +75,107 @@
           </div>
         </section>
 
-        <section class="section-2"></section>
+        <section class="section-2">
+          <h2>Places to visit</h2>
+          <h3 class="sub-heading">just some of the many...</h3>
+          <div class="main-grid-3-columns">
+            <div class="card">
+              <div class="sub-grid-2-columns">
+                <div class="sub-grid-content">
+                  <img src="../media/merlion-park.jpg" alt="Merlion Park" />
+                </div>
 
-        <section class="section-3"></section>
+                <div class="sub-grid-content">
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.8122125410755!2d103.85219851475392!3d1.2867448990614971!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da190ed6203605%3A0x66ad5eee6e01f3a7!2sMerlion%20Park!5e0!3m2!1sen!2ssg!4v1676095299020!5m2!1sen!2ssg"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                  ></iframe>
+                </div>
+              </div>
+
+              <h3>Merlion Park</h3>
+              <p>
+                Meet the local legend and globally-recognised icon with a visit
+                to Merlion Park. Spouting water from its mouth, the Merlion
+                statue stands at 8.6 metres and weighs 70 tonnes. Originally
+                located at the mouth of the Singapore River, it was built by
+                local craftsman Lim Nang Seng, designed by Kwan Sai Kheong, and
+                unveiled on 15 September 1972 by then-Prime Minister Lee Kuan
+                Yew.
+              </p>
+              <h4>Address:</h4>
+              <p>1 Fullerton Rd, Singapore 049213</p>
+            </div>
+
+            <div class="card">
+              <div class="sub-grid-2-columns">
+                <div class="sub-grid-content">
+                  <img src="../media/gbtb.jpeg" alt="Gardens by the Bay" />
+                </div>
+
+                <div class="sub-grid-content">
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.8202911035924!2d103.86142451475396!3d1.2815682990652666!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da1904937e1633%3A0x62099677b59fca76!2sGardens%20by%20the%20Bay!5e0!3m2!1sen!2ssg!4v1676097485602!5m2!1sen!2ssg"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                  ></iframe>
+                </div>
+              </div>
+
+              <h3>Gardens by the Bay</h3>
+              <p>
+                A national garden and premier horticultural attraction for local
+                and international visitors, Gardens by the Bay is a showpiece of
+                horticulture and garden artistry that presents the plant kingdom
+                in a whole new way, entertaining while educating visitors with
+                plants seldom seen in this part of the world, ranging from
+                species in cool, temperate climates to tropical forests and
+                habitats.
+              </p>
+              <h4>Address:</h4>
+              <p>18 Marina Gardens Dr, Singapore 018953</p>
+            </div>
+
+            <div class="card">
+              <div class="sub-grid-2-columns">
+                <div class="sub-grid-content">
+                  <img src="../media/haw-par-villa.jpg" alt="Haw Par Villa" />
+                </div>
+
+                <div class="sub-grid-content">
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.81781197877!2d103.77975741475399!3d1.2831590990641069!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da1bac2338a9f5%3A0xe8ff2105a078ac3b!2sHaw%20Par%20Villa!5e0!3m2!1sen!2ssg!4v1676097548471!5m2!1sen!2ssg"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                  ></iframe>
+                </div>
+              </div>
+
+              <h3>Haw Par Villa</h3>
+              <p>
+                Haw Par Villa – formerly known as the Tiger Balm Garden – is an
+                8.5-hectare Asian cultural park, the last of its kind in the
+                world. It is an open-air park, so bring your brolly and wear
+                comfortable walking shoes. Cameras are essential if you love
+                fond memories and sharing them. Haw Par Villa is probably the
+                most Instagram-able place in Singapore!
+              </p>
+              <h4>Address:</h4>
+              <p>262 Pasir Panjang Rd, Singapore 118628</p>
+            </div>
+          </div>
+        </section>
+
+        <section class="section-3">
+          <div class="main-grid-3-columns"></div>
+        </section>
       </main>
 
       <footer>
