Completed the last main section, added classes to be used in CSS styling to some elements

--- a/index.html
+++ b/index.html
@@ -5,26 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="source/style.css" />
+    <script async src="//www.instagram.com/embed.js"></script>
     <title>Welcome to Singapore - Travel website</title>
   </head>
   <body>
     <div class="container">
-      <header>
-        <h3>~TRAVEL~</h3>
+      <header class="text-center">
+        <h3 class="margin-zero standard-font-size">~TRAVEL~</h3>
         <h1>Welcome to Singapore</h1>
-        <h2>Country with rich cultural heritage</h2>
-        <h2>& world-class buildings</h2>
-        <h2>in South East Asia</h2>
-        <a href="#">Learn more</a>
+        <h2 class="margin-zero">Nation-state with rich cultural heritage</h2>
+        <h2 class="margin-zero">& world-class buildings</h2>
+        <h2 class="margin-zero">in South East Asia</h2>
+        <a href="/index.html#main" class="standard-font-size">Learn more</a>
       </header>
 
-      <main>
+      <main class="margin-zero" id="main">
         <section class="section-1">
-          <h2>Why Singapore?</h2>
-          <div class="main-grid-2-columns">
+          <h2 class="text-center">Why Singapore?</h2>
+          <div class="grid main-grid-2-columns">
             <div>
               <h3>Singapore is a City in Nature</h3>
-              <p>
+              <p class="line-height-one-and-a-half standard-font-size">
                 To combat this decline in natural space, the government
                 introduced the vision of making Singapore a "Garden City" after
                 its independence, aiming to improve quality of life. Since then,
@@ -40,7 +41,7 @@
 
             <div>
               <h3>Singapore has Rich Cultural Heritage</h3>
-              <p>
+              <p class="line-height-one-and-a-half standard-font-size">
                 Despite its small size, Singapore has a diversity of languages,
                 religions, and cultures. Racial and religious harmony is
                 regarded as a crucial part of Singapore's success, and played a
@@ -53,12 +54,13 @@
               <img
                 src="/media/peranakan-shophouses.jpg"
                 alt="Peranakan shophouses"
+                class="peranakan-shophouses"
               />
             </div>
 
             <div>
               <h3>Singapore is a Food Haven</h3>
-              <p>
+              <p class="line-height-one-and-a-half standard-font-size">
                 Local foodstuff generally relate to a particular ethnicity -
                 Chinese, Malay and Indian; but the diversity of cuisine has
                 increased further by the hybridisation of different styles, such
@@ -76,11 +78,11 @@
         </section>
 
         <section class="section-2">
-          <h2>Places to visit</h2>
-          <h3 class="sub-heading">just some of the many...</h3>
-          <div class="main-grid-3-columns">
+          <h2 class="text-center">Places to visit</h2>
+          <h3 class="sub-heading text-center">just some of the many...</h3>
+          <div class="grid main-grid-3-columns">
             <div class="card">
-              <div class="sub-grid-2-columns">
+              <div class="grid sub-grid-2-columns">
                 <div class="sub-grid-content">
                   <img src="../media/merlion-park.jpg" alt="Merlion Park" />
                 </div>
@@ -97,7 +99,7 @@
               </div>
 
               <h3>Merlion Park</h3>
-              <p>
+              <p class="line-height-one-and-a-half standard-font-size">
                 Meet the local legend and globally-recognised icon with a visit
                 to Merlion Park. Spouting water from its mouth, the Merlion
                 statue stands at 8.6 metres and weighs 70 tonnes. Originally
@@ -107,11 +109,18 @@
                 Yew.
               </p>
               <h4>Address:</h4>
-              <p>1 Fullerton Rd, Singapore 049213</p>
+              <p class="line-height-one-and-a-half standard-font-size">
+                1 Fullerton Rd, Singapore 049213
+              </p>
+              <a
+                href="https://www.visitsingapore.com/see-do-singapore/recreation-leisure/viewpoints/merlion-park/"
+                class="text-center standard-font-size"
+                >Learn more</a
+              >
             </div>
 
             <div class="card">
-              <div class="sub-grid-2-columns">
+              <div class="grid sub-grid-2-columns">
                 <div class="sub-grid-content">
                   <img src="../media/gbtb.jpeg" alt="Gardens by the Bay" />
                 </div>
@@ -128,7 +137,7 @@
               </div>
 
               <h3>Gardens by the Bay</h3>
-              <p>
+              <p class="line-height-one-and-a-half standard-font-size">
                 A national garden and premier horticultural attraction for local
                 and international visitors, Gardens by the Bay is a showpiece of
                 horticulture and garden artistry that presents the plant kingdom
@@ -138,13 +147,24 @@
                 habitats.
               </p>
               <h4>Address:</h4>
-              <p>18 Marina Gardens Dr, Singapore 018953</p>
+              <p class="line-height-one-and-a-half standard-font-size">
+                18 Marina Gardens Dr, Singapore 018953
+              </p>
+              <a
+                href="https://www.gardensbythebay.com.sg/"
+                class="text-center standard-font-size"
+                >Learn more</a
+              >
             </div>
 
             <div class="card">
-              <div class="sub-grid-2-columns">
+              <div class="grid sub-grid-2-columns">
                 <div class="sub-grid-content">
-                  <img src="../media/haw-par-villa.jpg" alt="Haw Par Villa" />
+                  <img
+                    src="../media/haw-par-villa.jpg"
+                    alt="Haw Par Villa"
+                    class="haw-par-villa"
+                  />
                 </div>
 
                 <div class="sub-grid-content">
@@ -159,8 +179,8 @@
               </div>
 
               <h3>Haw Par Villa</h3>
-              <p>
-                Haw Par Villa – formerly known as the Tiger Balm Garden – is an
+              <p class="line-height-one-and-a-half standard-font-size">
+                Haw Par Villa - formerly known as the Tiger Balm Garden - is an
                 8.5-hectare Asian cultural park, the last of its kind in the
                 world. It is an open-air park, so bring your brolly and wear
                 comfortable walking shoes. Cameras are essential if you love
@@ -168,21 +188,62 @@
                 most Instagram-able place in Singapore!
               </p>
               <h4>Address:</h4>
-              <p>262 Pasir Panjang Rd, Singapore 118628</p>
+              <p class="line-height-one-and-a-half standard-font-size">
+                262 Pasir Panjang Rd, Singapore 118628
+              </p>
+              <a
+                href="https://www.hawparvilla.sg/"
+                class="text-center standard-font-size"
+                >Learn more</a
+              >
             </div>
           </div>
         </section>
 
         <section class="section-3">
-          <div class="main-grid-3-columns"></div>
+          <h2 class="text-center">Singapore in the lens of...</h2>
+          <div class="grid main-grid-3-columns-for-videos">
+            <div>
+              <iframe
+                class="video"
+                src="https://www.youtube.com/embed/RYKj9TH-yh8"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
+            </div>
+
+            <div>
+              <iframe
+                class="video"
+                src="https://www.youtube.com/embed/1fngYpOCfhg"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
+            </div>
+
+            <div>
+              <iframe
+                class="video"
+                src="https://www.youtube.com/embed/CKO9xBuwBMU"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </div>
         </section>
       </main>
 
-      <footer>
-        <div class="footer-grid">
+      <footer class="standard-font-size">
+        <div class="grid footer-grid">
           <div>
             <h3>More about Singapore</h3>
-            <ul>
+            <ul class="line-height-one-and-a-half">
               <li>
                 <a href="https://www.changiairport.com/" target="_blank">
                   Singapore Changi Airport website
@@ -206,11 +267,11 @@
 
           <div>
             <h3>About me</h3>
-            <p>
+            <p class="line-height-one-and-a-half">
               Hey there! I am Hui Shan. I have been living in Singapore for my
               whole life and I am very grateful that I was born here.
             </p>
-            <p>
+            <p class="line-height-one-and-a-half">
               I created this page as part of a project for SheCodes Responsive
               Add-On workshop to develop my coding skills.
             </p>
@@ -218,7 +279,7 @@
 
           <div>
             <h3>About this website</h3>
-            <p>
+            <p class="line-height-one-and-a-half">
               This page is about some well-known tourist spots in Singapore, was
               coded by Toh Hui Shan and is
               <a
