Edited page according to responsiveness

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <header class="text-center">
         <h3 class="margin-zero standard-font-size">~TRAVEL~</h3>
-        <h1>Welcome to Singapore</h1>
+        <h1>Welcome to Singapore - SG</h1>
         <h2 class="margin-zero">Nation-state with rich cultural heritage</h2>
         <h2 class="margin-zero">& world-class buildings</h2>
         <h2 class="margin-zero">in South East Asia</h2>
@@ -21,7 +21,7 @@
 
       <main class="margin-zero" id="main">
         <section class="section-1">
-          <h2 class="text-center">Why Singapore?</h2>
+          <h2 class="text-center">Why SG?</h2>
           <div class="grid main-grid-2-columns">
             <div>
               <h3>Singapore is a City in Nature</h3>
@@ -201,7 +201,7 @@
         </section>
 
         <section class="section-3">
-          <h2 class="text-center">Singapore in the lens of...</h2>
+          <h2 class="text-center">SG in the lens of...</h2>
           <div class="grid main-grid-3-columns-for-videos">
             <div>
               <iframe
